@@ -1,3 +1,9 @@
+2012-08-04  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: When signing up, instead of generating a completely
+	random username a more sensible username is automatically derived
+	from first/last name or e-mail.
+
 2012-07-18  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.7.0 released.
